2016-10-29 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation.
2016-10-29 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out lwnetrouterd(8).
2016-11-07 Fred Gleason <fredg@paravelsystems.com>
	* Added a libsamplerate dependency.
	* Implemented a basic audio router using HPI.